# foresight

./: .gitignore  Cargo.toml  PLAN.md  README.md  cargo-sources.json  io.github.CHANGEME.RsyncGUI.yml  io.github.superuser_miguel.Foresight.release.yml  io.github.superuser_miguel.Foresight.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: cargo-build.sh
crates/foresight/: Cargo.toml  build.rs
crates/foresight/src/: capabilities.rs  change_object.rs  help.rs  job.rs  log_object.rs  main.rs  profiles.rs  window.rs
crates/rsync-events/: Cargo.toml
crates/rsync-events/src/: lib.rs
crates/rsync-events/tests/: fixtures_test.rs
crates/rsyncgui/: Cargo.toml  build.rs
crates/rsyncgui/src/: change_object.rs  job.rs  main.rs  window.rs
data/: foresight.gresource.xml  io.github.CHANGEME.RsyncGUI.desktop.in  io.github.superuser_miguel.Foresight.desktop.in  io.github.superuser_miguel.Foresight.metainfo.xml  rsyncgui.gresource.xml
docs/: index.html
reference/: rsync_events.py
scripts/: capture_fixtures.sh
src/ui/: window.blp
tests/fixtures/: dry_run_fresh.txt  dry_run_itemize.txt  error_missing_source.txt  progress2_run.raw  stats_run.txt
