[package]
name = "foresight"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GTK4/libadwaita frontend for rsync (bundled engine)"

[[bin]]
name = "foresight"
path = "src/main.rs"

[dependencies]
# Imported as `gtk` / `adw` (idiomatic gtk-rs). gtk re-exports gio & glib.
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }  # ListView sections
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }  # SwitchRow 1.4, AboutDialog 1.5
rsync-events = { path = "../rsync-events" }
